--- a/private_dot_config/waybar/style.css
+++ b/private_dot_config/waybar/style.css
@@ -1,8 +1,11 @@
 /* Main Waybar Window */
 window#waybar {
-    font-family: "JetBrains Mono NerdFont";
+    font-family: "SauceCodePro Nerd Font";
     background-color: rgba(0 ,0 ,0 ,0);
-    font-size: 1rem;
+    opacity: 1;
+    font-size: 1.1rem;
+    font-weight: bold;
+    /*font-style: oblique;*/
 }
 
 
@@ -11,10 +14,13 @@ window#waybar {
   margin-top: 0.5em;
   margin-bottom: 0.5rem;
   margin-left: 0.5em;
-  opacity: 0.8;
+  opacity: 0.9;
   background-color: rgba(0,0,0,1);
   border-radius: 0.7rem;
   color: snow;
+  /*border: 2px;*/
+  /*border-style: solid;*/
+  /*border-color: rgba(39, 209, 256, 0.8);*/
 }
 
 
@@ -23,12 +29,15 @@ window#waybar {
   margin-top: 0.5em;
   margin-bottom: 0.5rem;
   margin-right: 100px;
-  opacity: 0.8;
+  opacity: 0.9;
   /*background-color: rgba(0,0,0,1);*/
   background-color: black;
   border-radius: 0.7rem;
   padding: 2px;
   color: snow;
+  /*border: 2px;*/
+  /*border-style: solid;*/
+  /*border-color: red;*/
 }
 
 
@@ -37,132 +46,20 @@ window#waybar {
   margin-top: 0.35em;  /* Floating */
   margin-bottom: 0.5rem;
   margin-right: 0.35em;
-  opacity: 0.8;
+  opacity: 0.9;
   background-color: rgba(0,0,0,1);
   border-radius: 0.7rem;
   padding: 10px;
   color: snow;
 }
 
-  #workspaces {
-      border: double 2px transparent;
-      border-radius: 12px;
-      background-image: linear-gradient(@bg, @bg),
-                          linear-gradient(45deg, @bright-magenta, @bright-blue);
-      background-origin: border-box;
-      background-clip: content-box, border-box;
-    
-      margin-top: 6px;
-      margin-bottom: 6px;
-  }
-    
-  #workspaces button {
-      margin-left: 2px;
-      margin-right: 2px;
-      margin-top: 2px;
-      margin-bottom: 2px;
-      padding-top: 0px;
-      padding-bottom: 0px;
-    
-      border-radius: 8px;
-      background-color: @bright-magenta;
-      color: @fg;
-    
-      border: none;
-  }
-    
-  #workspaces button.persistent {
-      color: @fg;
-      background-color: @bg;
-  }
-    
-  #workspaces button.active {
-      color: @fg;
-      background-color: @bright-blue;
-  }
-
-
-
-/*#workspaces {*/
-/*  padding: 1px;*/
-/*}*/
-/**/
-/*#workspaces button {*/
-/*  padding:  0.5em;*/
-/*  padding: 10px;*/
-/*}*/
-/**/
-/*#workspaces button.empty {*/
-/*  color: @overlay0;*/
-/*}*/
-/**/
-/*#workspaces button.visible {*/
-/*  color: @blue;*/
-/*}*/
-/**/
-/*#workspaces button.persistent {*/
-/*  color: @fg;*/
-/*  background-color: @bg;*/
-/*}*/
-/**/
-/*#workspaces button.active {*/
-/*  color: @green;*/
-/*}*/
-/**/
-/*#workspaces button.urgent {*/
-/*  background-color: @red;*/
-/*  border-radius: 1em;*/
-/*  color: @text;*/
-/*}*/
-
-
-#window {
-  /*background-color: rgba(0,0,0,0.5);*/
-  /*border-radius: 0.5rem;*/
-  padding: 5px;
-}
-
-window#waybar.empty #window {
-    background-color: transparent;
-}
-
-
-/* Clock */
-#clock {
-  font-weight: normal;
-  border-radius: 0.5rem;
-  padding: 0 3px 0 0;
-}
-
-
-/* Tray */
-#tray {
-  /*padding: 5px; */
-}
-
-#tray menu {
-}
-
-#tray > .passive {
-}
-
-#tray > .active {
-}
-
-#tray > .needs-attention {
-}
-
-
-/* Audio (Wireplumber) */
-#wireplumber {
-}
-
-#wireplumber.muted {
-}
-
 /* SwayNC */
 #custom-notification {
   font-family: "NotoSansMono Nerd Font";
-  margin-bottom: 5px;
   margin-right: 5px;
 }
+
+#window {
+  padding: 8px;
+}
+
