--- a/private_dot_config/waybar/style.css
+++ b/private_dot_config/waybar/style.css
@@ -1,65 +1,146 @@
-/* Main Waybar Window */
+* {
+  border: none;
+  border-radius: 0;
+  min-height: 0;
+  font-family: Ubuntu;
+  font-size: 16px;
+  font-weight: bold;    
+
+}
+
 window#waybar {
-    font-family: "SauceCodePro Nerd Font";
-    background-color: rgba(0 ,0 ,0 ,0);
-    opacity: 1;
-    font-size: 1.1rem;
-    font-weight: bold;
-    /*font-style: oblique;*/
+  background-color: #282c34;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+}
+
+window#waybar.hidden {
+  opacity: 0.5;
+}
+
+#workspaces {
+  background-color: transparent;
+}
+
+#workspaces button {
+  all: initial;
+  /* Remove GTK theme values (waybar #1351) */
+  min-width: 0;
+  /* Fix weird spacing in materia (waybar #450) */
+  box-shadow: inset 0 -3px transparent;
+  /* Use box-shadow instead of border so the text isn't offset */
+  padding: 2px 12px;
+  margin: 4px 3px;
+  border-radius: 4px;
+  background-color: #1e1e2e;
+  color: #cdd6f4;
+}
+
+#workspaces button.active {
+  color: #1e1e2e;
+  background-color: #cdd6f4;
+}
+
+#workspaces button:hover {
+  box-shadow: inherit;
+  text-shadow: inherit;
+  color: #1e1e2e;
+  background-color: #cdd6f4;
+}
+
+#workspaces button.urgent {
+  background-color: #f38ba8;
+}
+
+#cpu,
+#memory,
+#custom-kernel,
+#custom-power,
+#custom-diskfree,
+#battery,
+#backlight,
+#wireplumber,
+#network,
+#clock,
+#tray {
+  border-radius: 4px;
+  margin: 4px 3px;
+  padding: 2px 12px;
+  background-color: #282c34;
+  color: #282c34;
+}
+#custom-kernel {
+  background-color: #ff6c6b;
+}
+
+#custom-power {
+  margin-right: 6px;
+  background-color: #f2cdcd;
+}
+
+#custom-diskfree {
+  background-color: #fc9867;
+}
+
+#custom-logo {
+  padding-right: 7px;
+  padding-left: 7px;
+  margin-left: 5px;
+  font-size: 15px;
+  border-radius: 8px 0px 0px 8px;
+  color: #1793d1;
+}
+
+#cpu {
+  background-color: #98be65;
 }
 
 
-/* Left Side Modules */
-.modules-left {
-  margin-top: 0.5em;
-  margin-bottom: 0.5rem;
-  margin-left: 0.5em;
-  opacity: 0.9;
-  background-color: rgba(0,0,0,1);
-  border-radius: 0.7rem;
-  color: snow;
-  /*border: 2px;*/
-  /*border-style: solid;*/
-  /*border-color: rgba(39, 209, 256, 0.8);*/
+#memory {
+  background-color: #46d9ff;
 }
 
-
- /* Center Modules */
-.modules-center {
-  margin-top: 0.5em;
-  margin-bottom: 0.5rem;
-  margin-right: 100px;
-  opacity: 0.9;
-  /*background-color: rgba(0,0,0,1);*/
-  background-color: black;
-  border-radius: 0.7rem;
-  padding: 2px;
-  color: snow;
-  /*border: 2px;*/
-  /*border-style: solid;*/
-  /*border-color: red;*/
+#battery {
+  background-color: #f38ba8;
 }
 
-
-/* Right Side Modules */
-.modules-right {
-  margin-top: 0.35em;  /* Floating */
-  margin-bottom: 0.5rem;
-  margin-right: 0.35em;
-  opacity: 0.9;
-  background-color: rgba(0,0,0,1);
-  border-radius: 0.7rem;
-  padding: 10px;
-  color: snow;
+#battery.warning,
+#battery.critical,
+#battery.urgent {
+  background-color: #ff6c6b;
+  color: #f1fa8c;
 }
 
-/* SwayNC */
-#custom-notification {
-  font-family: "NotoSansMono Nerd Font";
-  margin-right: 5px;
+#battery.charging {
+  background-color: #98be65;
+  color: #181825;
 }
 
-#window {
-  padding: 8px;
+#backlight {
+    background-color: #ff6c6b;
+}
+
+#wireplumber {
+  background-color: #46d9ff;
+}
+
+#network {
+  background-color: #98be65;
+  padding-right: 17px;
+}
+
+#clock {
+  background-color: #cba6f7;
+}
+
+tooltip {
+  border-radius: 8px;
+  padding: 15px;
+  background-color: #131822;
+}
+
+tooltip label {
+  padding: 5px;
+  background-color: #131822;
 }
 
